# graphrag-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature-template.md
.github/workflows/: ci.yml
app/: __init__.py  benchmark_qed.py  benchmark_qed_questions.py  benchmark_scoring.py  clarifier.py  graphrag_runner.py  main.py  pipeline.py  sources.py
app/api/: __init__.py  schemas.py  sse.py
app/api/routers/: prompt.py
app/config/: __init__.py
app/redis_cache/: __init__.py  client.py  conversation_history.py  prompt_cache.py  rate_limit.py  semantic_cache.py
data/: scraper.py
githooks/: commit-msg  pre-commit
prompts/: basic_search_system_prompt.txt  clarifier.txt  community_report_graph.txt  community_report_text.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_claims.txt  extract_graph.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  question_gen_system_prompt.txt  summarize_descriptions.txt
scripts/: ci.sh  compare_indexes.py  setup-hooks.sh
tests/: __init__.py  test_benchmark_qed.py  test_conversation_history.py  test_graphrag_runner.py  test_main.py  test_scraper.py  test_semantic_cache.py  test_sources.py
webb/: README.md  index.html  package-lock.json  package.json
webb/src/: App.tsx  index.css  main.tsx
webb/src/components/: ChatRuntimeProvider.tsx
webb/src/components/assistant-ui/: attachment.tsx  markdown-text.tsx  thread.tsx  tooltip-icon-button.tsx
webb/src/lib/: prompt-api-adapter.ts  utils.ts
